--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 body {
     background-color: lightgrey;
+    font-family: "Roboto", sans-serif;
     font-size: 1.2rem
+    font-weight:bold
     ;
 }
 
@@ -10,6 +12,7 @@ margin:3rem auto;
 width: 60%;
 border-radius: 10px;
 padding: 5%;
+font-weight: bold;
 }
 
 input {
@@ -22,4 +25,6 @@ form button {
     padding: 0.5REM;
     font-weight: bold;
     font-size: 1.2REM;
+    font-family: inherit;
 }
+
