--- a/styles.css
+++ b/styles.css
@@ -15,16 +15,36 @@ padding: 5%;
 font-weight: bold;
 }
 
+label {
+    margin-bottom: 1rem;
+    display: block;
+}
+
 input {
     width: 50%;
     display: block;
     margin-bottom: 1rem;
+    box-sizing: border;
+    font: inherit;
+    border: 1px solid rgb(184, 184, 184);
+    padding: 0.25rem;
+    color: rgb(184, 184, 184);
+
+}
+
+input:focus {
+    background-color: rgb(73, 69, 69);
 }
 
 form button {
-    padding: 0.5REM;
+    padding: 0.8REM;
     font-weight: bold;
     font-size: 1.2REM;
     font-family: inherit;
+    text-transform: uppercase;
+    background-color: rgb(248, 186, 71);
+    border-radius: 10px;
+    border: none;
+    
 }
 
